[tool.poetry]
name = "hello_world"
version = "0.1.0"
description = ""
authors = ["Marco Balestri <m.balestri@ermes.company>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
